# fileTransfer

./: CMakeLists.txt  LICENSE.txt  README.md  base64.cpp  base64.h  client.cpp  client.h  encode64.cpp  encryption.cpp  encryption.h  fileManager.cpp  fileManager.h  hash.cpp  hash.h  main.cpp  main_client_server.cpp  main_encryption_encode.cpp  main_hash.cpp  packetHeader.h  server.cpp  server.h  testFile.txt  user.txt  userManager.cpp  userManager.h
